# video-adversarial-augmentation

./: .dockerignore  .gitignore  Dockerfile  README.md  mlproject  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
.github/workflows/: tests.yml
src/mlproject/: __init__.py  boilerplate.py  callbacks.py  config.py  decorators.py  evaluators.py  trainers.py
src/mlproject/aug_models/: __init__.py  augmentation.py  store_configs.py
src/mlproject/datasets/: config.py  hmdb51.py  store_configs.py
src/mlproject/models/: __init__.py  mvfnet_resnet50.py  store_configs.py  tsm_resnet50.py  uniformer.py
src/mlproject/models/epic/: BatchRelationalModule.py  BatchRelationalModule1D.py  __init__.py  feature_model.py  hubconf.py  load.py  mvf.py  pretrained_settings.py  resnet50_spatialRN.py  torchvision_weights.py  tsm.py  tsn.py
src/mlproject/models/epic/archs/: bn_inception.py
src/mlproject/models/epic/ops/: LSTM.py  MVF.py  basic_ops.py  se_module.py  temporal_shift.py  transformer.py
src/mlproject/models/video_swin/: README.md  __init__.py  base.py  i3d_head.py  swin_transformer.py  swin_transformer_with_head.py
src/mlproject/optimizers/: store_configs.py
src/mlproject/schedulers/: store_configs.py
src/mlproject/tests/: video_batch.py
src/mlproject/torch_datasets/: __init__.py  build_kinetics_400.py  gulp_sparsesample.py  kinetics_400.py  store_configs.py
src/mlproject/torch_datasets/loader/: decord_sparsesample_dataset.py  decord_sparsesample_squeezed_dataset.py
src/mlproject/utils/: __init__.py  loader.py  log.py  wandb.py
tests/: conftest.py  test_gulpio2.py
tests/res/hmdb51_tests/splits_gulp_rgb/: train1.csv
tools/: run.env  run.py  run_aug.py
